# deploy-commander

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-build.sh  docker-compose.yml  docker-run-examples.md  gitlab-ci-example.yml  global_variables.json  test_vars.json
.github/workflows/: release.yml
examples/: README.md  command-logging-example.yml  command_system_demo.rs  command_yaml_test.rs  debug_output_test.rs  deploy-config.yml  direct_variables_file_test.rs  encoding-test.yml  interactive-config-example.yml  local-deploy-config.yml  log-test.yml  project_variables_test.rs  simple_yaml_test.rs  test-all-example.yml  test-run.yml  test-variables.json  test_command_builder_variables.rs  unicode-variables.json  unicode-variables.yml  variable_demo.rs  variable_test.rs  variables.yml  variables_file_test.rs  yaml-variables-example.yml  yaml_variables_demo.rs
release/: deploy-cmd
src/: app.rs  cli.rs  commands.rs  config.rs  events.rs  executor.rs  logging.rs  main.rs  settings.rs  storage.rs
src/executor/: chain_builder.rs  command_executor.rs  mod.rs  runner.rs  variable_loader.rs
src/run/: command_runner.rs  deployment.rs  deployment_manager.rs  deployments.rs  history.rs  mod.rs
