[package]
name = "deploy-commander"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Инструмент для управления командами деплоя"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
log4rs = "1.3.0"
chrono = "0.4"
colored = "2.0"
handlebars = "4.3"
dirs = "4.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
ctrlc = "3.2"
notify = "5.1"
home = "0.5"
command_system = { git = "https://github.com/Nikolaikolya/command_system.git" }

[dev-dependencies]
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "2.1"
serial_test = "0.9"

[[bin]]
name = "deploy-cmd"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'